Made booking form function properly

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "git-cache": "git rm -r --cached . && git add --all ."
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.645.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/third-parties": "^14.2.7",
     "@splinetool/react-spline": "^4.0.0",
@@ -21,10 +22,13 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "server-only": "^0.0.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "three": "^0.167.1",
